fix popup visibility

--- a/src/components/Popups/BurgerMainPopup/BurgerMainPopup.css
+++ b/src/components/Popups/BurgerMainPopup/BurgerMainPopup.css
@@ -1,22 +1,41 @@
 .burgerMainPopup {
-    visibility: hidden;
-    transition: 0.3s;
+   display: flex;
+   justify-content: center;
+   align-items: flex-start;
+   margin: auto;
+   position: fixed;
+   top: 0;
+   bottom: 0;
+   left: 0;
+   right: 0;
+   visibility: hidden;
+   opacity: 0;
+   height: 0;
+   transition: visibility 0.3s; /*opacity 0.3s;*/
+   box-sizing: border-box;
+   overflow:auto;
+   z-index: 10;
   }
   
 .burgerMainPopup__opened {
     visibility: visible;
     display: flex;
-    justify-content: end;
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    transition: 0.3s;
+    margin: auto;
+    justify-content: center;
+    align-items: flex-start;
     width: 100%;
     height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    visibility: visible;
+    opacity: 1;
+    transition: visibility 0.3s; /*opacity 0.3s;*/
+    overflow: auto;
     z-index: 10;
-    background-color: rgba(0,0,0,.3);
 }
 
 .burgerMainPopup__container {
@@ -108,12 +127,12 @@
   }
   
   .burgerMainPopup__subMenu .burgerMainPopup-nav-link {
-    padding-left: 20px; /* Отступ для подменю */
+    padding-left: 20px;
   }
   
   .burgerMainPopup__subMenu .burgerMainPopup-link {
-    color: #FBBB00; /* Цвет ссылок в подменю */
-    font-size: 14px; /* Меньший размер шрифта для подменю */
+    color: #FBBB00;
+    font-size: 14px;
   }
   
   .burgerMainPopup__subMenu .burgerMainPopup-nav-link:hover {
